<?xml version="1.0" encoding="utf-8"?>

<resources>

    <string name="app_name">DSLFY</string>
    <string name="content_column">Content</string>
    <string name="page_referrers">Referrers</string>
    <string name="refresh_action">Refresh</string>
    <string name="logout_action">Logout</string>
    <string name="page_news">News</string>
    <string name="page_users">Users</string>
    <string name="page_checkins">Check In\'s</string>
    <string name="title_column">Title</string>
    <string name="location_column">Location</string>
    <string name="user_column">User</string>
    <string name="date_column">Date</string>
    <string name="error_loading_users">Loading users failed</string>
    <string name="error_loading_news">Loading news failed</string>
    <string name="error_loading_friendstream">Loading Friend Stream failed</string>
    <string name="no_users">No Users</string>
    <string name="no_news">No News</string>
    <string name="avatar">Avatar</string>
    <string name="choose">Choose</string>

    <!-- AuthenticatorActivity -->
    <string name="label_email_address">Email Address</string>
    <string name="label_password">Password</string>
    <string name="label_sign_in">Sign In</string>
    <string name="label_sign_in_facebook">Sign In with Facebook</string>
    <string name="label_sign_in_twitter">Sign In with Twitter</string>
    <string name="message_signing_in">Signing in…</string>
    <string name="blank_field_warning">Please populate this field</string>
    <string name="signup_link">New to DSLFY? &lt;a href=http://www.androidbootstrap.com>Click here&lt;/a> to learn more.</string>
    <string name="message_bad_credentials">Email Address or Password is incorrect</string>
    <string name="message_auth_failed">Please enter a valid password</string>
    <string name="message_auth_failed_new_account">Please enter a valid email address &amp; password</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="title_timer">Timer</string>
    <string name="home">Home</string>
    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Close</string>
    <string name="title_home">Home</string>

    <string name="title_settings">  Settings    </string>
    <string name="title_logout">    Logout      </string>

    <!-- Photo stuff -->
    <string name="gallery_description">My SLFYs</string>
    <string name="social_tab_description">Friend Stream</string>

    <string name="save_photo">Save</string>
    <string name="delete_photo">Discard</string>

    <string name="camera_result_bar_title">Add Effects</string>

    <string name="action_share">Share</string>

    <string name="toast_error_camera_preview">Can\'t initialize camera preview.</string>
    <string name="toast_error_save_picture">Can\'t save picture on external storage.</string>

    <string name="content_description_take_picture">Take picture</string>

    <string name="friend_stream">Friend Stream</string>

    <!-- Preference Pane -->
    <string name="pref_header_notification">Notifcations</string>
    <string name="pref_notification_checkbox">Receive Daily Notifications</string>
    <string name="pref_notification_time">Reminder Notification will be sent at</string>

    <string name="pref_header_mobiledata">Wireless Data</string>
    <string name="pref_mobiledata_wifi_only">Synchronize Image Data over Wifi only</string>

    <string name="pref_header_diagnostics">Diagnostics</string>
    <string name="pref_diagnostics_senddata">Send anonymous usage data</string>

</resources>